--- a/Index.html
+++ b/Index.html
@@ -21,10 +21,31 @@
         </div>
         <div class="inputBox group">
           <a href="#">Forgot Password</a>
-          <a href="#" id="Signup">Sign up</a>
+          <a href="#" id="signup">Signup</a>
         </div>
         <div class="inputBox">
           <input type="submit" value="Sign in">
+        </div>
+      </form>
+      <form id="signupForm">
+        <h2>Registration</h2>
+        <div class="inputBox">
+          <input type="text" placeholder=" Username">
+        </div>
+        <div class="inputBox">
+          <input type="password" placeholder="Email Address">
+        </div>
+        <div class="inputBox">
+          <input type="password" placeholder="Create Password">
+        </div>
+        <div class="inputBox">
+          <input type="password" placeholder="Confirm Password">
+        </div>
+        <div class="inputBox">
+          <input type="submit" value="Register Account">
+        </div>
+        <div class="inputBox group">
+          <a href="#">Already Have an Account ? <b id="signin">Login</b></a>
         </div>
       </form>
     </div>
